--- a/art_gallery/package.json
+++ b/art_gallery/package.json
@@ -11,6 +11,7 @@
     "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.21.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
